<resources>
    <string name="app_name">Android labs_3</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_name">Your name</string>
    <string name="your_picture">Your picture</string>
    <string name="please_click">Click the button above to take a picture</string>
    <string name="enter_email">Enter your email address</string>
    <string name="input_email">Type email here</string>
    <string name="enter_password">Type your password</string>
    <string name="input_password"></string>
    <string name="input_name">Enter your name</string>
    <string name="ButtonText">Login</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="send_button">Send</string>
    <string name="receive_button">Receive</string>
    <string name="edit_text_area">Type here</string>
    <string name="open_weatherForecast">Open Forecast</string>
    <string name="open_toolbarPage">Go to Toolbar page</string>
    <string name="item_options">options</string>
    <string name="open_stuff">stuff</string>
    <string name="open_star">its a star</string>
    <string name="new_message">This is the initial message</string>
    <string name="unique_title">Hey</string>
    <string name="very_unique_title">What\'s</string>
    <string name="super_mega_ultra_unique_title">Up</string>

</resources>
