<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/item1"
        android:title="@string/item_options"
        android:icon="@drawable/options"
        app:showAsAction="always"/>

    <item android:id="@+id/search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="always|ifRoom|collapseActionView"
        android:title="@string/open_stuff"/>
    <item
        android:id="@+id/item2"
        android:icon="@drawable/options"
        android:title="@string/item_options"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/item3"
        android:icon="@drawable/star"
        app:showAsAction="never"
        android:title="@string/open_star"
        android:orderInCategory="2"/>
</menu>